src/app/public/public.component.scss
@import '../../styles/main';

.buttons,
.inputs,
.checkboxes {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-evenly;

    margin-bottom: 20px;

    width: 100%;    
}

.item-row {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    flex-wrap: wrap;

    & > * {
        margin: 10px;
    }
}

.inputs .item-row,
.radios .item-row .radio-container {
    align-items: flex-start;
    flex-direction: column;
}

